--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+*{
   margin: 0;
   padding: 0;
 }
@@ -18,7 +18,7 @@ body{
 
 .navbar-logo {
   height: 30px;
-  /* width: auto; */
+  width: auto; 
 }
 .navbar-company {
   font-weight: bold;
@@ -44,7 +44,7 @@ body{
   display: inline-block;
   font-size: 14px;
   cursor: pointer;
-}
+} 
 
 .chat-container {
   width: 400px;
